[package]
name = "ZKGambit"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
colored = "2.0.0"
bellman = "0.13"
bls12_381 = "0.7"
ff = "0.13"
tokio = { version = "1.0", features = ["full"] }
pyth-sdk-solana = "0.7.2"
solana-client = "1.14"
solana-sdk = "1.14"